--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Amy Xu</title>
+    <link rel="stylesheet" href="css/reset.webarchive">
+    <!--[if IE]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
 
-test testt
+<body id="home">
+
+    <h1>Amy Xu</h1>
+
+</body>
+</html>
