--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Amy Xu</title>
-    <link rel="stylesheet" href="css/reset.webarchive">
+    <link rel="stylesheet" href="css/reset.css">
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
