--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
 
     <h1>Amy Xu</h1>
 
+    <ul>
+        <li><a href="/">Projects</a></li>
+        <li><a href="/">Resume</a></li>
+        <li><a href="/">Github</a></li>
+        <li><a href="/">Info</a></li>
+    </ul>
+
 </body>
 </html>
