--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <h1>Amy Xu</h1>
 
-    <ul>
-        <li><a href="/">Projects</a></li>
-        <li><a href="/">Resume</a></li>
-        <li><a href="/">Github</a></li>
-        <li><a href="/">Info</a></li>
+    <ul id="menu">
+        <li class="menu-item"><a href="/">Projects</a></li>
+        <li class="menu-item"><a href="/">Resume</a></li>
+        <li class="menu-item"><a href="/">Github</a></li>
+        <li class="menu-item"><a href="/">Info</a></li>
     </ul>
 
 </body>
