fiddled with things

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Amy Xu</title>
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <script src="js/home-screen.js" defer></script>
     <script src="js/projects-screen.js" defer></script>
@@ -17,52 +19,60 @@
 <body>
   <nav>
     <div id="menu-home">
-       Amy Xu
+       AMY XU
     </div>
     <div id="menu-projects">
-      Projects
+      PROJECTS
     </div>
     <div id="menu-teaching">
-      Teaching
+      TEACHING
     </div>
     <div id="menu-resume">
-      Resume
+      RESUME
     </div>
     <a href="https://github.com/xuamyj"><div>
-      Github [insert new tab icon]
+      GITHUB
+      <!-- [TODO: insert new tab icon] -->
+      <!-- https://codepen.io/chriscoyier/pen/lcDBd -->
     </div></a>
   </nav>
 
-  <section id="home">
-    <h1>
-      Amy Xu
-    </h1>
-    <div>
-      <p>
-        [Insert brief paragraph or something]
-      </p>
-    </div>
-  </section>
+  <article>
+    <section id="home">
+      <h1>
+        Amy Xu
+      </h1>
+      <div>
+        <p>
+          [Insert brief paragraph and picture... or something]
+        </p>
+      </div>
+    </section>
 
-  <section id="projects">
-    <h1>
-      Projects
-    </h1>
-    <div class="list"></div>
-  </section>
+    <section id="projects">
+      <h1>
+        Projects
+      </h1>
+      <div class="list"></div>
+    </section>
 
-  <section id="teaching">
-    <h1>
-      Teaching
-    </h1>
-    <div class="list"></div>
-  </section>
+    <section id="teaching">
+      <h1>
+        Teaching
+      </h1>
+      <div class="list"></div>
+    </section>
 
-  <section id="resume">
-    <h1>
-      Resume
-    </h1>
-    <div></div>
-  </section>
+    <section id="resume">
+      <div>
+        <h1>
+          [Insert PDF iframe]
+        </h1>
+        <p>
+          [Make sure printing from here just prints the PDF]
+        </p>
+      </div>
+    </section>
+  </article>
 </body>
 </html>
